# neuradix-robotics-platform

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-functional-spec-v05.yml  rust.yml
contracts/standard/actuation/: thrust-command.yaml
contracts/standard/control/: depth-setpoint.yaml
contracts/standard/navigation/: vehicle-depth.yaml
contracts/standard/perception/: obstacle-map.yaml  sonar-range.yaml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  envelope.rs  exit.rs  main.rs  render.rs
crates/cli/src/app/: contract.rs  doctor.rs  explain.rs  graph.rs  mod.rs  record.rs  studio.rs  version.rs
crates/cli/tests/: cli.rs  explain.rs  graph.rs  record.rs  studio.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: canonical.rs  error.rs  generate.rs  lib.rs  model.rs  parse.rs  validate.rs
crates/contracts/tests/: golden.rs  validation.rs
crates/contracts/tests/golden/: vehicle_depth.rs
crates/embedded-codegen/: Cargo.toml
crates/embedded-codegen/src/: cpp_gen.rs  error.rs  golden.rs  lib.rs  names.rs  rust_gen.rs  wire.rs
crates/embedded-codegen/tests/: conformance.rs  golden.rs  rust_projection.rs
crates/embedded-codegen/tests/golden/: vehicle_depth.h  vehicle_depth.rs  vehicle_depth_vectors.json
crates/embedded-core/: Cargo.toml
crates/embedded-core/src/: gate.rs  health.rs  identity.rs  lease.rs  lib.rs  node.rs  watchdog.rs
crates/embedded-core/tests/: behaviour.rs
crates/embedded-transport/: Cargo.toml
crates/embedded-transport/src/: crc.rs  frame.rs  lib.rs  sequence.rs
crates/embedded-transport/tests/: framing.rs  link.rs
crates/graph/: Cargo.toml
crates/graph/src/: error.rs  identity.rs  lib.rs  model.rs  registry.rs  validate.rs
crates/graph/tests/: registry.rs  validate.rs
crates/python/: Cargo.toml
crates/python/src/: error.rs  lib.rs  supervisor.rs  worker.rs
crates/python/tests/: worker.rs
crates/python/tests/workers/: testkit_worker.py
crates/record/: Cargo.toml
crates/record/src/: codec.rs  digest.rs  error.rs  lib.rs  mcap.rs  model.rs  native.rs  recording.rs
crates/record/tests/: mcap.rs  roundtrip.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: component.rs  error.rs  executor.rs  health.rs  id.rs  lib.rs  lifecycle.rs
crates/runtime/tests/: lockstep_replay.rs
crates/safety/: Cargo.toml
crates/safety/src/: authority.rs  constraint.rs  decision.rs  error.rs  fdir.rs  gate.rs  lib.rs  lineage.rs
crates/safety/tests/: fdir.rs  gate.rs
crates/sim/: Cargo.toml
crates/sim/src/: controller.rs  error.rs  lib.rs  plant.rs  sensor.rs  sim.rs
crates/sim/tests/: simulation.rs
crates/studio/: Cargo.toml
crates/studio/src/: error.rs  inspection.rs  lib.rs  model.rs  series.rs
crates/studio/tests/: inspection.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: cli_output.rs  clock.rs  golden.rs  hashing.rs  lib.rs  lifecycle.rs  stream.rs
crates/testkit/tests/: architecture.rs
crates/time/: Cargo.toml
crates/time/src/: clock.rs  domain.rs  duration.rs  error.rs  lib.rs  timestamp.rs
crates/time/tests/: time.rs
crates/transport-api/: Cargo.toml
crates/transport-api/src/: lib.rs  stream.rs
docs/: Neuradix_CLI_Command_Specification_v0.1.md  Neuradix_Embedded_Profile_Implementation_Plan_v0.1.md  Neuradix_Implementation_Plan_v0.1.md  Neuradix_Implementation_Plan_v0.2.md  Neuradix_Implementation_Plan_v0.3.md  Neuradix_RFC_Backlog_v0.2.md  Neuradix_RFC_Backlog_v0.3.md  Neuradix_Robotics_Platform_Functional_Specification_v0.2.md  Neuradix_Robotics_Platform_Functional_Specification_v0.4.md  Neuradix_Robotics_Platform_Functional_Specification_v0.5.md  Neuradix_Robotics_Platform_Functional_Specification_v0.5_Addendum.md  Neuradix_Studio_Implementation_Plan_v0.1.md  Neuradix_Studio_XR_Implementation_Plan_v0.2.md
docs/decisions/: ADR-0001-toolchain-and-edition.md  ADR-0002-license.md  ADR-0003-testkit-dependency-set.md
docs/rfcs/: RFC-0001-Component-and-Lifecycle-Model.md  RFC-0002-Contract-Format-and-Code-Generation.md  RFC-0003-Time-Clocks-and-Deterministic-Replay.md  RFC-0004-Transport-Neutral-Data-Plane.md  RFC-0005-Safety-Authority-and-Command-Lineage.md  RFC-0013-CLI-Command-Output-and-Automation-Contract.md  RFC-0014-Embedded-Runtime-and-Board-Support.md  RFC-0015-Recording-and-Deterministic-Replay.md  RFC-0016-Deterministic-Execution.md  RFC-0017-FDIR-and-Fault-Modes.md  RFC-0018-Python-Worker-SDK-and-Isolation.md  RFC-0019-Deployment-Graph-Validation.md  RFC-0020-Deterministic-Vehicle-Simulation.md  RFC-0021-MCAP-Recording-Backend.md  RFC-0022-Studio-Inspection-Model.md
examples/auv-depth-sim/: Cargo.toml
examples/auv-depth-sim/src/: main.rs
examples/embedded-propulsion/: Cargo.toml
examples/embedded-propulsion/src/: main.rs
examples/minimal-depth-stream/: Cargo.toml
examples/minimal-depth-stream/src/: main.rs
examples/minimal-depth-stream/tests/: generated_matches.rs
examples/python-worker/: Cargo.toml  detector.py
examples/python-worker/src/: main.rs
examples/reference-auv/: deployment.yaml
python/: neuradix_worker.py
tools/docs/: build_functional_spec_v05.py
