[package]
name = "neuradix-python"
description = "Managed, isolated Python worker processes: supervision, health and crash isolation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
neuradix-runtime = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
