[package]
name = "neuradix-record"
description = "Deterministic recording and replay: a native, self-describing container and a replay digest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
neuradix-contracts = { workspace = true }
neuradix-time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
