[package]
name = "neuradix-runtime"
description = "Minimal Neuradix component model: identity, lifecycle state machine, health and typed errors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
neuradix-contracts = { workspace = true }
neuradix-time = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
neuradix-record = { workspace = true }
