[package]
name = "neuradix-time"
description = "Explicit Neuradix time semantics: clock domains, typed timestamps, durations and injectable clocks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["std"]
# Enables the ambient `SystemClock`. With `default-features = false` the crate is
# `no_std` and depends only on `core` (used by `neuradix-embedded-core`).
std = []

[dependencies]
